vest-dsl/test/bad/invocation_args_type_mismatch2.vest
foo(@a: u8) = {
  payload: [u8; @a],
}

bar(@i: [u8; 10]) = {
  @b: u8,
  f: foo(@i),
}
